# synkro

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: advanced_usage.py  anthropic_basic.py  finetune_llama.py  openai_basic.py  quickstart.py
synkro/: __init__.py  cli.py  errors.py  parsers.py  pipelines.py  schemas.py
synkro/core/: __init__.py  dataset.py  policy.py
synkro/examples/: __init__.py
synkro/formatters/: __init__.py  qa.py  sft.py
synkro/generation/: __init__.py  generator.py  planner.py  responses.py  scenarios.py
synkro/llm/: __init__.py  client.py  rate_limits.py
synkro/models/: __init__.py  anthropic.py  google.py  openai.py
synkro/modes/: __init__.py  config.py  qa.py  sft.py
synkro/prompts/: __init__.py  base.py  qa_templates.py  templates.py
synkro/quality/: __init__.py  grader.py  refiner.py
synkro/types/: __init__.py  core.py  dataset_type.py
tests/: __init__.py  test_imports.py
